fixed various text

--- a/docRaptor/Page1.html
+++ b/docRaptor/Page1.html
@@ -8,6 +8,7 @@
 	<base href="https://www.firefund.net">
 	<link rel="stylesheet" href="/css/bundle.css">
 	<style>
+		/* 794px x 1123px in 96 DPI */
 		@page { size: A4; }
 
 		body { position:relative; }
